--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -1,4 +1,12 @@
 <h2>Course List</h2>
+
+<div class="form-group row">
+  <label class="col-sm-2 col-form-label" for="">Filter By</label>
+  <div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="filter" />
+  </div>
+</div>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -11,13 +19,15 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let course of courses">
-      <td>{{ course.imageUrl }}</td>
+    <tr *ngFor="let course of filteredCourses">
+      <td><img [src]="course.imageUrl" alt="" width="40" height="40" /></td>
       <td>{{ course.name }}</td>
       <td>{{ course.price }}</td>
-      <td>{{ course.code }}</td>
-      <td>{{ course.releaseDate }}</td>
-      <td>{{ course.rating }}</td>
+      <td>{{ course.code | lowercase | replace: "-":" " }}</td>
+      <td>{{ course.releaseDate | date: "dd/MM/yyyy" }}</td>
+      <td>
+        <app-start [rating]="course.rating"></app-start>
+      </td>
     </tr>
   </tbody>
 </table>
