--- a/src/app/courses/course.info.component.html
+++ b/src/app/courses/course.info.component.html
@@ -1,1 +1,87 @@
-<h2>Course id = {{ courseId }}</h2>
+<h2>Course info</h2>
+
+<form #courseForm="ngForm">
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label" for="">Name</label>
+    <div class="col-sm-10">
+      <input
+        type="text"
+        name="name"
+        required
+        class="form-control"
+        [(ngModel)]="course.name"
+        placeholder="Digite um nome"
+        #courseName="ngModel"
+        [ngClass]="{ 'is-invalid': courseName.invalid }"
+      />
+      <div class="invalid-feedback">
+        <span>Course Name is required</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label" for="">Price</label>
+    <div class="col-sm-10">
+      <input
+        type="number"
+        name="price"
+        required
+        class="form-control"
+        [(ngModel)]="course.price"
+        placeholder="Digite um preço"
+        #coursePrice="ngModel"
+        [ngClass]="{ 'is-invalid': coursePrice.invalid }"
+      />
+      <div class="invalid-feedback">
+        <span>Course Price is required</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label" for="">Rating</label>
+    <div class="col-sm-10">
+      <input
+        type="number"
+        name="rating"
+        required
+        class="form-control"
+        [(ngModel)]="course.rating"
+        placeholder="Digite um preço"
+        #coursePrice="ngModel"
+        [ngClass]="{ 'is-invalid': coursePrice.invalid }"
+      />
+      <div class="invalid-feedback">
+        <span>Course Price is required</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label" for="">Descripiton</label>
+    <div class="col-sm-10">
+      <textarea
+        name="description"
+        required
+        class="form-control"
+        [(ngModel)]="course.description"
+        placeholder="Digite um preço"
+        #courseDescription="ngModel"
+        [ngClass]="{ 'is-invalid': courseDescription.invalid }"
+      ></textarea>
+      <div class="invalid-feedback">
+        <span>Course Description is required</span>
+      </div>
+    </div>
+  </div>
+
+  <button
+    [disabled]="courseForm.invalid"
+    class="btn btn-primary mr-2"
+    (click)="save()"
+  >
+    Save
+  </button>
+  <button class="btn btn-secundary">Back</button>
+</form>
