--- a/src/app/courses/course.info.component.html
+++ b/src/app/courses/course.info.component.html
@@ -1,6 +1,6 @@
 <h2>Course info</h2>
 
-<form #courseForm="ngForm">
+<form #courseForm="ngForm" *ngIf="course">
   <div class="form-group row">
     <label class="col-sm-2 col-form-label" for="">Name</label>
     <div class="col-sm-10">
@@ -83,5 +83,5 @@
   >
     Save
   </button>
-  <button class="btn btn-secundary">Back</button>
+  <button [routerLink]="['/courses']" class="btn btn-secundary">Back</button>
 </form>
